fix: add scroll to bottom on mobile screen

--- a/src/pages/feedbacks-page/feedbacks/feedbacks.module.scss
+++ b/src/pages/feedbacks-page/feedbacks/feedbacks.module.scss
@@ -19,7 +19,7 @@
       gap: 16px;
     }
 
-    @media (min-width: 769px) {
+
       max-height: 730px;
       overflow-y: auto;
       scrollbar-width: none;
@@ -28,7 +28,7 @@
       &::-webkit-scrollbar {
         display: none;
       }
-    }
+
   }
 
   .button_container {
